[package]
name = "gh-reldl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
getopts = "0.2"
octocrab = "0.12"
regex = "1.5"
reqwest = { version = "0.11" }
tokio = { version = "1.14.0", features = ["full"] }
