[package]
name = "gh-reldl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
getopts = "0.2"
regex = "1.5"
tokio = { version = "1.14.0", features = ["full"] }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.octocrab]
version = "0.12"
default-features = false
features = ["rustls"]
